@@ -598,6 +598,21 @@ instead of <userinput>hd:</userinput>.
   </sect2>
 
   <sect2>
+<title>Remote access: Installing SSH and setting a password</title>
+<para>
+
+In case you can login to the system via console, you can skip this section. If
+the system should be accessible via the network later on, you need to install
+SSH and set a password for root:
+
+<informalexample><screen>
+# aptitude install ssh
+# passwd
+</screen></informalexample>
+</para>
+  </sect2>
+
+  <sect2>
 <title>Finishing touches</title>
 <para>
 
