@@ -37,6 +37,8 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Enable korean language.
   * Use base-system-size and task-desktop-lxde-inst instead of hardcoding
     install size in chroot method.
+  * Advise to install ssh and set root passwd in chroot method, thanks Michael
+    Stapelberg for the patch. Closes: #413649.
 
   [ Steve McIntyre ]
   * Make it clearer how we expect users to write CDs to USB sticks.
